--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gatebook</title>
+  <title>Workspace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header class="navbar">
-    <div class="container">
-      <div id="logo">Gatebook</div>
-      <ul class="header-right">
-        <li><%= link_to "トップ", root_path %></li>
-        <li><%= link_to "概要", about_path %></li>
-        <li><%= link_to "ユーザー一覧", users_path %></li>
-      </ul>
-    </div>
-  </header>
-  
-  <div class="container">
-    <%= yield %>
-  </div>
+
+<%= yield %>
+
+</body>
+</html>
